# lynx-installer

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json
builder/builder-ui/: index.html  package-lock.json  package.json  vite.config.ts
builder/builder-ui/src/: App.css  App.tsx  dialogs.ts
builder/builder-ui/src/components/: Sidebar.css  Sidebar.tsx  Titlebar.css  Titlebar.tsx
builder/builder-ui/src/components/sections/: AppSection.tsx  BuildSection.tsx  FilesSection.tsx  StepsSection.tsx  ThemeSection.tsx
builder/src-tauri/: Cargo.toml  tauri.conf.json
builder/src-tauri/capabilities/: default.json
builder/src-tauri/src/: lib.rs  main.rs
shell/: My-App.lynx  My-App.lynxpak
shell/shell-ui/: index.html  package-lock.json  package.json  vite.config.js
shell/shell-ui/src/: main.js  style.css
shell/src-tauri/: Cargo.toml  tauri.conf.json
shell/src-tauri/capabilities/: default.json
shell/src-tauri/src/: lib.rs  main.rs
src/: bundle.rs  config.rs  error.rs  extract.rs  lib.rs  progress.rs  runner.rs
test-payload/: test.lynx  test.lynxpak
test-payload/files/: app.config  readme.txt
tests/: config_tests.rs
