[package]
name        = "lynx-engine"
version     = "0.1.0"
edition     = "2024"
description = "Core engine for Lynx Installer — handles config, bundling, extraction, and install steps."

[lib]
name       = "lynx_engine"
crate-type = ["lib"]

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
zstd        = { workspace = true }
tar         = { workspace = true }
walkdir     = { workspace = true }
tempfile    = { workspace = true }
dirs        = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
tempfile    = { workspace = true }

[features]
default = []