[package]
name        = "lynx-builder"
version     = "0.1.0"
edition     = "2024"
description = "Lynx Builder — the desktop app for creating .lynx installer projects"
license     = "MIT"

[lib]
name       = "lynx_builder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
# Workspace shared deps
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }

# Lynx engine — for bundling .lynxpak files from the builder
lynx-engine = { path = "../../engine" }

# Tauri
tauri            = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

# Logging
log = "0.4"
