[package]
name        = "lynx-shell"
version     = "0.1.0"
edition     = "2024"
description = "Lynx Installer — the UI shell that end users see during installation"
license     = "MIT"

[lib]
name       = "lynx_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
# Workspace shared deps
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }

# Lynx engine — our core library
lynx-engine = { path = "../../engine" }

# Tauri
tauri            = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"

# Async runtime (for install simulation + real engine later)
tokio = { workspace = true }

# Logging
log = "0.4"

[features]
# Enabled by lynx-build when the uninstaller binary is available
with_uninstaller = []